# booking-challenge-2021

./: .gitignore  README.md  pyproject.toml
features/: base.py  key_category.py  target_category.py  utils.py
gbdt/: train.py
gbdt/configs/: gbdt001.yml
gbdt/features/: base.py  label_encoding.py  numerical_feature.py
gbdt/src/: __init__.py  metrics.py  runner.py  utils.py
gbdt/src/models/: lightgbm.py  model.py
graph/: biggraph_config.py
lstm_hakubishin_v1/: train.py  train_w2v.py
lstm_hakubishin_v1/configs/: exp001.yml  exp100.yml  lstm_using_test_data.yml
lstm_hakubishin_v1/src/: __init__.py  dataset.py  losses.py  models.py  runner.py  utils.py
