[tool.poetry]
name = "riiid"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
pandas = "^1.1.4"
lightgbm = "^3.1.0"
scikit-learn = "v0.24.0"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
google-cloud-bigquery = {extras = ["bqstorage", "pandas"], version = "^2.4.0"}
gensim = "^3.8.3"
torch = "^1.7.0"
torchvision = "^0.8.2"
Keras = "^2.4.3"
tensorflow = "^2.4.0"
catalyst = "^20.12"
torchsummary = "^1.5.1"
torch-summary = "^1.4.5"
transformers = "^4.1.1"
pytorch-toolbelt = "^0.4.0"
jupyter = "^1.0.0"
torchbiggraph = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
stickytape = "^0.1.15"
kaggle = "^1.5.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

